syntax = "proto3";

option java_outer_classname = "BaseMsgProto";

message BaseMsg {

    // the type of msg
    int32 msg_type = 1;

    // the sequence number in sender server
    int64 msg_sequence_number = 2;

    // the uuid of msg, made up by sender server's id, sequence number and timestamp
    int64 msg_uuid = 3;

    // if this msg is a reply to any action, record the uuid of the msg needed reply
    int64 msg_reply_uuid = 4;

    // sender server address(address = ip:host)
    string server_sender_address = 5;

    // single receiver server address
    string server_single_receiver_address = 6;

    // multi receiver server id
    repeated string server_multi_receiver_address = 7;

    // if this msg needs timeout in reply
    int32 timeout = 8;

    // timestamp, use System.currentTimeMillis()
    int64 timestamp = 9;

    // msg reply need number
    int32 need_reply_num = 10;

    // content, maybe json
    string content = 11;
}

